@@ -6,6 +6,14 @@ AC_DEFUN([AC_JNI_INCLUDE_DIR],[
 JNI_INCLUDE_DIRS=""
 
 test "x$JAVAC" = x && AC_MSG_ERROR(['$JAVAC' undefined])
+
+case "$JAVAC" in
+    /*)	_ACJNI_JAVAC="$JAVAC"
+	;;
+     *) AC_PATH_PROG(_ACJNI_JAVAC, $JAVAC, no)
+        ;;
+esac
+
 AC_PATH_PROG(_ACJNI_JAVAC, $JAVAC, no)
 test "x$_ACJNI_JAVAC" = xno && AC_MSG_ERROR([$JAVAC could not be found in path])
 
